tests/ui/crashes/ice-96721.stderr
error: malformed `path` attribute input
  --> $DIR/ice-96721.rs:7:1
   |
LL | #[path = foo!()]
   | ^^^^^^^^^^^^^^^^ help: must be of the form: `#[path = "file"]`

error: aborting due to previous error

